--- a/BasicWaveChart/BasicWaveChart/BasicWaveChart/BasicWaveChartUC.xaml
+++ b/BasicWaveChart/BasicWaveChart/BasicWaveChart/BasicWaveChartUC.xaml
@@ -70,6 +70,7 @@
         <ContextMenu x:Key="wavemenu">
             <MenuItem x:Name="fullshowmenu" Header="全景" Click="fullshowmenu_Click"></MenuItem>
             <MenuItem x:Name="movemenu" Header="移动" Click="movemenu_Click"></MenuItem>
+            <MenuItem x:Name="integralmenu" Header="积分" Click="integralmenu_Click" ></MenuItem>
         </ContextMenu>
     </UserControl.Resources>
     <widget:ZoomPanel x:Name="zoompanel" Background="Yellow" Ratio="{Binding RatioS, ElementName=ControlContainer}">
