--- a/BasicWaveChart/BasicWaveChart/BasicWaveChart/BasicWaveChartUC.xaml
+++ b/BasicWaveChart/BasicWaveChart/BasicWaveChart/BasicWaveChartUC.xaml
@@ -125,10 +125,12 @@
                 </Canvas.RenderTransform>
             </Canvas>
             <Slider Panel.ZIndex="10" x:Name="moveslider"
-                    Visibility="Hidden"
+                    Visibility="Visible"
+                    Value="0"
                     Maximum="0"
                     Canvas.Left="{Binding Width, ElementName=yaxis}"
-                    Height="10" Minimum="-30000" ValueChanged="moveslider_ValueChanged"></Slider>
+                    Height="10" Minimum="-30000" ValueChanged="moveslider_ValueChanged" 
+                    Width="{Binding Width, ElementName=WindowCanvas}"></Slider>
             <Canvas x:Name="WindowCanvas" Background="LightBlue" Opacity="0.5"
                     ClipToBounds="False"
                     Panel.ZIndex="9"
