--- a/SilverTest/SilverTest/WaveHistoryWnd.xaml
+++ b/SilverTest/SilverTest/WaveHistoryWnd.xaml
@@ -5,6 +5,7 @@
         xmlns:dw="http://research.microsoft.com/DynamicDataDisplay/1.0"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SilverTest"
+        xmlns:BasicWaveChart="clr-namespace:BasicWaveChart;assembly=BasicWaveChart" 
         mc:Ignorable="d"
         WindowStartupLocation="CenterOwner"
         WindowStyle="None"
@@ -34,7 +35,14 @@
             <Canvas Width="586" Margin="5,0,0,4" Background="{DynamicResource {x:Static SystemColors.InactiveSelectionHighlightBrushKey}}" >
 
                 <Border BorderBrush="Silver" BorderThickness="1" Height="465" Background="White" VerticalAlignment="Center" HorizontalAlignment="Center" Width="586">
-                    <dw:ChartPlotter x:Name="realCpt" Height="200" DockPanel.Dock="Top" Margin="9,97,9,165"/>
+                    <!--<dw:ChartPlotter x:Name="realCpt" Height="200" DockPanel.Dock="Top" Margin="9,97,9,165"/> -->
+                    <BasicWaveChart:BasicWaveChartUC x:Name="historywaveuc"
+                                         RatioS="1:2" 
+                                         MoveMode ="HORIZONTAL"
+                                         NumberOfDValue="10000"
+                                         TopBlankZone="20"
+                                         RightBlankZone="30"
+                                       />
                 </Border>
                 <Button x:Name="exitbtn" Width="80" Height="40" Canvas.Left="453" Canvas.Top="390" Click="exitbtn_Click">退出</Button>
             </Canvas>
